--- a/WMS/WarehouseZone.csproj
+++ b/WMS/WarehouseZone.csproj
@@ -1907,6 +1907,7 @@
     <Content Include="Views\ProductCategories\_ProductCategoriesList.cshtml" />
     <Content Include="Views\Products\_EditableKitProductGrid.cshtml" />
     <Content Include="Views\Products\_ProductKits.cshtml" />
+    <Content Include="Views\Products\_ProductGroupedItems.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{4A0DDDB5-7A95-4FBF-97CC-616D07737A77}" />
