grpuped product and product detail is checked in Imported from Changeset 2438

--- a/WarehouseEcommerce/Web.config
+++ b/WarehouseEcommerce/Web.config
@@ -43,6 +43,9 @@
     <add key="SmtpClientUserName" value="email@ganedata.co.uk" />
     <add key="SmtpClientPassword" value="G4n3d474Star" />
     <add key="SiteId" value="1" />
+    <add key="VideoFormats" value=".avi,.mp4" />
+    <add key="ImageFormats" value=".jpeg,.png,.gif,.bmp,.jpg" />
+    <add key="DocumentFormats" value=".pdf,.docx,.xlxs,.txt" />
   </appSettings>
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
