productmovement table and log is created Imported from Changeset 2453

--- a/GaneEcommerce.Data/Ganedata.Core.Data.csproj
+++ b/GaneEcommerce.Data/Ganedata.Core.Data.csproj
@@ -755,6 +755,14 @@
     <Compile Include="Migrations\202004021636461_relationship-kitMap-added.designer.cs">
       <DependentUpon>202004021636461_relationship-kitMap-added.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202004151341083_product-movement-table-added.cs" />
+    <Compile Include="Migrations\202004151341083_product-movement-table-added.designer.cs">
+      <DependentUpon>202004151341083_product-movement-table-added.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202004151354435_prodct-movement-Id-added-in-inventoryTrnsaction.cs" />
+    <Compile Include="Migrations\202004151354435_prodct-movement-Id-added-in-inventoryTrnsaction.designer.cs">
+      <DependentUpon>202004151354435_prodct-movement-Id-added-in-inventoryTrnsaction.cs</DependentUpon>
+    </Compile>
     <Compile Include="MyDbConfiguration.cs" />
     <Compile Include="Helpers\DataImportFactory.cs" />
     <Compile Include="IApplicationContext.cs" />
@@ -1641,6 +1649,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202004021636461_relationship-kitMap-added.resx">
       <DependentUpon>202004021636461_relationship-kitMap-added.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202004151341083_product-movement-table-added.resx">
+      <DependentUpon>202004151341083_product-movement-table-added.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202004151354435_prodct-movement-Id-added-in-inventoryTrnsaction.resx">
+      <DependentUpon>202004151354435_prodct-movement-Id-added-in-inventoryTrnsaction.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
