--- a/GaneEcommerce.Entities/packages.config
+++ b/GaneEcommerce.Entities/packages.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="ApplicationInsights.Helpers.WebCore" version="1.3.0" targetFramework="net472" />
   <package id="BCrypt.Net-Next" version="3.3.3" targetFramework="net472" />
+  <package id="Microsoft.ApplicationInsights" version="2.1.0" targetFramework="net472" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.Razor" version="3.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.7" targetFramework="net472" />
