--- a/WMS/WarehouseZone.csproj
+++ b/WMS/WarehouseZone.csproj
@@ -17,7 +17,7 @@
     <AssemblyName>WMS</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <MvcBuildViews>false</MvcBuildViews>
-    <UseIISExpress>false</UseIISExpress>
+    <UseIISExpress>true</UseIISExpress>
     <IISExpressSSLPort />
     <IISExpressAnonymousAuthentication />
     <IISExpressWindowsAuthentication />
@@ -647,6 +647,7 @@
     <Compile Include="Helpers\ColorEditorHelper.cs" />
     <Compile Include="Helpers\ColorEditorOptions.cs" />
     <Compile Include="Helpers\DevexHelpers\HtmlEditorImportExportHelper.cs" />
+    <Compile Include="Helpers\GaneStockMovementItemsSessionHelper.cs" />
     <Compile Include="Helpers\GaneOrderDetailsSessionHelper.cs" />
     <Compile Include="Helpers\GaneProductAccountCodeSessionHelper.cs" />
     <Compile Include="Helpers\GaneOrderNotesSessionHelper.cs" />
@@ -1911,6 +1912,7 @@
     <Content Include="Views\Products\_EditableKitProductGrid.cshtml" />
     <Content Include="Views\Products\_ProductKits.cshtml" />
     <Content Include="Views\Products\_ProductGroupedItems.cshtml" />
+    <Content Include="Views\InventoryStocks\_StockMovementList.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{4A0DDDB5-7A95-4FBF-97CC-616D07737A77}" />
