--- a/WarehouseEcommerce/WarehouseEcommerce.csproj
+++ b/WarehouseEcommerce/WarehouseEcommerce.csproj
@@ -383,7 +383,7 @@
     <Content Include="Content\meanmenu.css" />
     <Content Include="Content\pe-icon-7-stroke.css" />
     <Content Include="Content\responsive.css" />
-    <Content Include="Content\Theme\Smart\style.css" />
+    <Content Include="Content\Theme\ElecTech\style.css" />
     <Content Include="Content\themes\base\accordion.css" />
     <Content Include="Content\themes\base\all.css" />
     <Content Include="Content\themes\base\autocomplete.css" />
@@ -916,41 +916,41 @@
     <Content Include="Areas\Shop\Views\Theme\Smart\Orders\PaymentInfo.cshtml" />
     <Content Include="Areas\Shop\Views\Theme\Smart\Test\Index.cshtml" />
     <Content Include="Areas\Shop\Views\Theme\Smart\Test\IPN.cshtml" />
-    <Content Include="Views\Theme\Smart\_ViewStart.cshtml" />
+    <Content Include="Views\Theme\ElecTech\_ViewStart.cshtml" />
     <Content Include="uploads\Digital-Signage-Brochure-2019.pdf" />
     <Content Include="uploads\Fusion_UEM_Overview-Brochure.pdf" />
     <Content Include="uploads\traffic_intelligence_bro_04-2013_a4_trs.pdf" />
     <Content Include="uploads\vxl-illumineye-datasheet-25-04-14.pdf" />
-    <Content Include="Views\Theme\Smart\Shared\_Layout.cshtml" />
-    <Content Include="Views\Theme\Smart\Shared\_HeaderPartial.cshtml" />
-    <Content Include="Views\Theme\Smart\Shared\_FooterPartial.cshtml" />
-    <Content Include="Views\Theme\Smart\Home\Index.cshtml" />
-    <Content Include="Views\Theme\Smart\Home\Services.cshtml" />
-    <Content Include="Views\Theme\Smart\Home\GetStarted.cshtml" />
-    <Content Include="Views\Theme\Smart\Home\Blog.cshtml" />
-    <Content Include="Views\Theme\Smart\Home\AboutUs.cshtml" />
-    <Content Include="Views\Theme\Smart\Home\Promotions.cshtml" />
-    <Content Include="Views\Theme\Smart\Home\PrivacyPolicy.cshtml" />
-    <Content Include="Views\Theme\Smart\Home\WarehouseManagement.cshtml" />
-    <Content Include="Views\Theme\Smart\Home\OrderManagement.cshtml" />
-    <Content Include="Views\Theme\Smart\Home\StockControl.cshtml" />
-    <Content Include="Views\Theme\Smart\Home\Epod.cshtml" />
-    <Content Include="Views\Theme\Smart\Home\EposSelfService.cshtml" />
-    <Content Include="Views\Theme\Smart\Home\Ecommerce.cshtml" />
-    <Content Include="Views\Theme\Smart\Home\YardManagement.cshtml" />
-    <Content Include="Views\Theme\Smart\Home\FleetTrackingDriverManagement.cshtml" />
-    <Content Include="Views\Theme\Smart\Home\MobileDeviceManagement.cshtml" />
-    <Content Include="Views\Theme\Smart\Home\HumanResources.cshtml" />
-    <Content Include="Views\Theme\Smart\Home\RealTimeLocationSystem.cshtml" />
-    <Content Include="Views\Theme\Smart\Home\MobileVanSales.cshtml" />
-    <Content Include="Views\Theme\Smart\Home\DigitalSignage.cshtml" />
-    <Content Include="Views\Theme\Smart\Home\BusinessIntelligence.cshtml" />
-    <Content Include="Views\Theme\Smart\Home\LossPrevention.cshtml" />
-    <Content Include="Views\Theme\Smart\Home\RetailSolutions.cshtml" />
-    <Content Include="Views\Theme\Smart\Home\News.cshtml" />
+    <Content Include="Views\Theme\ElecTech\Shared\_Layout.cshtml" />
+    <Content Include="Views\Theme\ElecTech\Shared\_HeaderPartial.cshtml" />
+    <Content Include="Views\Theme\ElecTech\Shared\_FooterPartial.cshtml" />
+    <Content Include="Views\Theme\ElecTech\Home\Index.cshtml" />
+    <Content Include="Views\Theme\ElecTech\Home\Services.cshtml" />
+    <Content Include="Views\Theme\ElecTech\Home\GetStarted.cshtml" />
+    <Content Include="Views\Theme\ElecTech\Home\Blog.cshtml" />
+    <Content Include="Views\Theme\ElecTech\Home\AboutUs.cshtml" />
+    <Content Include="Views\Theme\ElecTech\Home\Promotions.cshtml" />
+    <Content Include="Views\Theme\ElecTech\Home\PrivacyPolicy.cshtml" />
+    <Content Include="Views\Theme\ElecTech\Home\WarehouseManagement.cshtml" />
+    <Content Include="Views\Theme\ElecTech\Home\OrderManagement.cshtml" />
+    <Content Include="Views\Theme\ElecTech\Home\StockControl.cshtml" />
+    <Content Include="Views\Theme\ElecTech\Home\Epod.cshtml" />
+    <Content Include="Views\Theme\ElecTech\Home\EposSelfService.cshtml" />
+    <Content Include="Views\Theme\ElecTech\Home\Ecommerce.cshtml" />
+    <Content Include="Views\Theme\ElecTech\Home\YardManagement.cshtml" />
+    <Content Include="Views\Theme\ElecTech\Home\FleetTrackingDriverManagement.cshtml" />
+    <Content Include="Views\Theme\ElecTech\Home\MobileDeviceManagement.cshtml" />
+    <Content Include="Views\Theme\ElecTech\Home\HumanResources.cshtml" />
+    <Content Include="Views\Theme\ElecTech\Home\RealTimeLocationSystem.cshtml" />
+    <Content Include="Views\Theme\ElecTech\Home\MobileVanSales.cshtml" />
+    <Content Include="Views\Theme\ElecTech\Home\DigitalSignage.cshtml" />
+    <Content Include="Views\Theme\ElecTech\Home\BusinessIntelligence.cshtml" />
+    <Content Include="Views\Theme\ElecTech\Home\LossPrevention.cshtml" />
+    <Content Include="Views\Theme\ElecTech\Home\RetailSolutions.cshtml" />
+    <Content Include="Views\Theme\ElecTech\Home\News.cshtml" />
     <Content Include="uploads\Registration-Certificate.pdf" />
-    <Content Include="Views\Theme\Smart\Home\CourierIntegration.cshtml" />
-    <Content Include="Views\Theme\Smart\Home\DataProtection.cshtml" />
+    <Content Include="Views\Theme\ElecTech\Home\CourierIntegration.cshtml" />
+    <Content Include="Views\Theme\ElecTech\Home\DataProtection.cshtml" />
     <Content Include="Scripts\bootstrap.min.js.map" />
     <Content Include="Scripts\bootstrap.js.map" />
     <Content Include="Scripts\bootstrap.bundle.min.js.map" />
@@ -964,6 +964,10 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Areas\Shop\Content\Theme\University\" />
+    <Folder Include="Areas\Shop\Views\Theme\University\" />
+    <Folder Include="Content\Theme\Classic\" />
+    <Folder Include="Views\Theme\Classic\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\GaneEcommerce.Data\Ganedata.Core.Data.csproj">
