--- a/WMS/WarehouseZone.csproj
+++ b/WMS/WarehouseZone.csproj
@@ -511,10 +511,12 @@
     <Compile Include="Controllers\ProductManufacturersController.cs" />
     <Compile Include="Controllers\ProductSerialController.cs" />
     <Compile Include="Controllers\ProductSpecialPriceController.cs" />
+    <Compile Include="Controllers\ProductsWebsitesMapsController.cs" />
     <Compile Include="Controllers\ScanSourceProductController.cs" />
     <Compile Include="Controllers\TenantConfigsController.cs" />
     <Compile Include="Controllers\TenantDepartmentController.cs" />
     <Compile Include="Controllers\TenantEmailConfigsController.cs" />
+    <Compile Include="Controllers\TenantWebsitesController.cs" />
     <Compile Include="Controllers\WebAPI\ApiCurrencyExRateController.cs" />
     <Compile Include="Controllers\WebAPI\ApiDataImportController.cs" />
     <Compile Include="Controllers\WebAPI\ApiMarketsController.cs" />
@@ -528,6 +530,9 @@
     <Compile Include="Controllers\WebAPI\ApiAssetController.cs" />
     <Compile Include="Controllers\WebAPI\ApiMerakiScanningController.cs" />
     <Compile Include="Controllers\WebAPI\ApiLocationSyncController.cs" />
+    <Compile Include="Controllers\WebsiteContentPagesController.cs" />
+    <Compile Include="Controllers\WebsiteNavigationsController.cs" />
+    <Compile Include="Controllers\WebsiteSlidersController.cs" />
     <Compile Include="CustomBindings\ConsignmentCustomBinding.cs" />
     <Compile Include="CustomBindings\CurrencyExRateCustomBinding.cs" />
     <Compile Include="CustomBindings\PalletsCustomBinding.cs" />
@@ -938,6 +943,7 @@
     <Content Include="Content\images\WZ_favicon.ico" />
     <Content Include="Content\imports\readme.txt" />
     <Content Include="Content\PagedList.css" />
+    <Content Include="Content\Site.css" />
     <Content Include="Content\Theme\Modern\Site.css" />
     <Content Include="Content\Theme\Default\Site.css" />
     <Content Include="Content\Themes\base\accordion.css" />
@@ -1823,12 +1829,6 @@
     <Content Include="Views\Theme\Default\Assets\_AssetLog.cshtml" />
     <Content Include="Views\Theme\Default\Products\_ProductDocumentsDetails.cshtml" />
     <Content Include="Views\Theme\Default\Products\ProductFilesDetail.cshtml" />
-    <Content Include="Views\Theme\Default\TenantDepartment\Create.cshtml" />
-    <Content Include="Views\Theme\Default\TenantDepartment\Delete.cshtml" />
-    <Content Include="Views\Theme\Default\TenantDepartment\Details.cshtml" />
-    <Content Include="Views\Theme\Default\TenantDepartment\Edit.cshtml" />
-    <Content Include="Views\Theme\Default\TenantDepartment\Index.cshtml" />
-    <Content Include="Views\Theme\Default\TenantDepartment\_TenantDepartmentList.cshtml" />
     <Content Include="Views\Theme\Default\PurchaseOrders\_BlindShipmentDetails.cshtml" />
     <Content Include="Views\Theme\Default\Reports\OrdersTotal.cshtml" />
     <Content Include="Views\Theme\Default\Reports\StockValueReport.cshtml" />
@@ -2489,6 +2489,36 @@
     <Content Include="Views\Theme\Modern\WorksOrders\EditBulkSingle.cshtml" />
     <Content Include="Views\Theme\Modern\WorksOrders\Index.cshtml" />
     <Content Include="Views\Theme\Modern\WorksOrders\ProcessOrder.cshtml" />
+    <Content Include="Views\Theme\Default\TenantWebsites\Create.cshtml" />
+    <Content Include="Views\Theme\Default\TenantWebsites\Delete.cshtml" />
+    <Content Include="Views\Theme\Default\TenantWebsites\Details.cshtml" />
+    <Content Include="Views\Theme\Default\TenantWebsites\Edit.cshtml" />
+    <Content Include="Views\Theme\Default\TenantWebsites\Index.cshtml" />
+    <Content Include="Views\Theme\Default\TenantWebsites\_TenantWebSiteList.cshtml" />
+    <Content Include="Views\_ViewStart.cshtml" />
+    <Content Include="Views\Shared\_Layout.cshtml" />
+    <Content Include="Views\Theme\Default\WebsiteContentPages\Create.cshtml" />
+    <Content Include="Views\Theme\Default\WebsiteContentPages\Delete.cshtml" />
+    <Content Include="Views\Theme\Default\WebsiteContentPages\Details.cshtml" />
+    <Content Include="Views\Theme\Default\WebsiteContentPages\Edit.cshtml" />
+    <Content Include="Views\Theme\Default\WebsiteContentPages\Index.cshtml" />
+    <Content Include="Views\Theme\Default\ProductsWebsitesMaps\Create.cshtml" />
+    <Content Include="Views\Theme\Default\ProductsWebsitesMaps\Delete.cshtml" />
+    <Content Include="Views\Theme\Default\ProductsWebsitesMaps\Details.cshtml" />
+    <Content Include="Views\Theme\Default\ProductsWebsitesMaps\Edit.cshtml" />
+    <Content Include="Views\Theme\Default\ProductsWebsitesMaps\Index.cshtml" />
+    <Content Include="Views\Theme\Default\WebsiteNavigations\Create.cshtml" />
+    <Content Include="Views\Theme\Default\WebsiteNavigations\Delete.cshtml" />
+    <Content Include="Views\Theme\Default\WebsiteNavigations\Details.cshtml" />
+    <Content Include="Views\Theme\Default\WebsiteNavigations\Edit.cshtml" />
+    <Content Include="Views\Theme\Default\WebsiteNavigations\Index.cshtml" />
+    <Content Include="Views\Theme\Default\WebsiteSliders\Create.cshtml" />
+    <Content Include="Views\Theme\Default\WebsiteSliders\Delete.cshtml" />
+    <Content Include="Views\Theme\Default\WebsiteSliders\Details.cshtml" />
+    <Content Include="Views\Theme\Default\WebsiteSliders\Edit.cshtml" />
+    <Content Include="Views\Theme\Default\WebsiteSliders\Index.cshtml" />
+    <Content Include="Views\Theme\Default\ProductsWebsitesMaps\_AllProductList.cshtml" />
+    <Content Include="Views\Theme\Default\WebsiteNavigations\_NavProductList.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{4A0DDDB5-7A95-4FBF-97CC-616D07737A77}" />
