--- a/WMS/WarehouseZone.csproj
+++ b/WMS/WarehouseZone.csproj
@@ -1191,6 +1191,7 @@
     <Content Include="Scripts\globalize\unit.js" />
     <Content Include="Scripts\JavaScript-Markets.js" />
     <Content Include="Scripts\JavaScript-SaleOrders.js" />
+    <Content Include="Scripts\JavaScript-WebsiteSettings.js" />
     <Content Include="Scripts\JavaScript-WorksOrder.js" />
     <Content Include="Scripts\JavaScript-PurchaseOrders.js" />
     <Content Include="Scripts\JavaScript-AccountSection.js" />
@@ -2519,6 +2520,10 @@
     <Content Include="Views\Theme\Default\WebsiteSliders\Index.cshtml" />
     <Content Include="Views\Theme\Default\ProductsWebsitesMaps\_AllProductList.cshtml" />
     <Content Include="Views\Theme\Default\WebsiteNavigations\_NavProductList.cshtml" />
+    <Content Include="Views\Theme\Default\Shared\_HoverUploader.cshtml" />
+    <Content Include="Views\Theme\Default\WebsiteNavigations\_NavigationList.cshtml" />
+    <Content Include="Views\Theme\Default\WebsiteContentPages\_WebsiteContentPagesList.cshtml" />
+    <Content Include="Views\Theme\Default\WebsiteSliders\_SliderList.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{4A0DDDB5-7A95-4FBF-97CC-616D07737A77}" />
