AuthUserGroups table added + new navigation implemented in smart ecommerce theme Imported from Changeset 2489

--- a/GaneEcommerce.Data/Ganedata.Core.Data.csproj
+++ b/GaneEcommerce.Data/Ganedata.Core.Data.csproj
@@ -787,6 +787,10 @@
     <Compile Include="Migrations\202005040512080_shipping-voucher-discount-tables-added.designer.cs">
       <DependentUpon>202005040512080_shipping-voucher-discount-tables-added.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202005050106322_Auth-User-Groups-Added.cs" />
+    <Compile Include="Migrations\202005050106322_Auth-User-Groups-Added.designer.cs">
+      <DependentUpon>202005050106322_Auth-User-Groups-Added.cs</DependentUpon>
+    </Compile>
     <Compile Include="MyDbConfiguration.cs" />
     <Compile Include="Helpers\DataImportFactory.cs" />
     <Compile Include="IApplicationContext.cs" />
@@ -1697,6 +1701,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202005040512080_shipping-voucher-discount-tables-added.resx">
       <DependentUpon>202005040512080_shipping-voucher-discount-tables-added.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202005050106322_Auth-User-Groups-Added.resx">
+      <DependentUpon>202005050106322_Auth-User-Groups-Added.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
