--- a/GaneEcommerce.Entities/Ganedata.Core.Entities.csproj
+++ b/GaneEcommerce.Entities/Ganedata.Core.Entities.csproj
@@ -193,6 +193,9 @@
     <Compile Include="Domain\Auth\AuthUserprofile.cs" />
     <Compile Include="Domain\Auth\Module.cs" />
     <Compile Include="Domain\Models\GlobalApi.cs" />
+    <Compile Include="Domain\Models\ProductAllowanceAdjustmentLog.cs" />
+    <Compile Include="Domain\Models\ProductAllowance.cs" />
+    <Compile Include="Domain\Models\ProductAllowanceGroupMap.cs" />
     <Compile Include="Domain\Models\ProductKitType.cs" />
     <Compile Include="Domain\Models\OrderSchedule.cs" />
     <Compile Include="Domain\Models\Account.cs" />
@@ -214,6 +217,7 @@
     <Compile Include="Domain\Models\PalletType.cs" />
     <Compile Include="Domain\Models\ProductCategory.cs" />
     <Compile Include="Domain\Models\ProductFiles.cs" />
+    <Compile Include="Domain\Models\ProductAllowanceGroup.cs" />
     <Compile Include="Domain\Models\ProductManufacturer.cs" />
     <Compile Include="Domain\ViewModels\TenantWebsiteViewModel.cs" />
     <Compile Include="Domain\Websites\ProductsNavigationMap.cs" />
